--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="login-container">
         <!-- Logo Image -->
-        <img src="path_to_your_image/download.png" alt="College Logo" class="logo">
+        <img src="download.png" alt="College Logo" class="logo">
 
         <h2>Login</h2>
         <form action="/submit" method="post">
